fixed off aligned register button

--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -27,6 +27,7 @@
 }
 .btn-large {
 	width: 30rem;
+	margin: 0 auto;
 }
 .btn-blue {
 	background-color:#122375;
